updates and cleanup